--- a/index.html
+++ b/index.html
@@ -16,17 +16,24 @@
 
 <body>
   <header class="jumbotron">
+
     <h1 class="display-3">Work Day Scheduler</h1>
+
     <p class="lead">A simple calendar app for scheduling your work day</p>
-    <script id="time">
-      var today = new Date()
-      var date =  today.getDay() + "," + today.getMonth() + today.getDay
-      document.write(today)
-    </script>
+
+    <h2 class="currentDate"></h2>
 
   </header>
-  <div class="container">
-    <!-- Timeblocks go here -->
+
+  <div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>  
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>  
+    <div class="grid-item">7</div>
+    <div class="grid-item">8</div>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
